<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alz-TimerzEMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username_">Username:</string>
    <string name="password">Password:</string>
    <string name="alz_timerz_ems">Alz-Timerz EMS</string>
    <color name="paleblue">#F0F8FF</color>
    <color name="red">#FF0000</color>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="label1">Home</string>
    <string name="label2">Schedules</string>
    <string name="label3">Requests</string>
    <string name="label4">Map</string>
    <string name="add_employee_contact_information">Add Employee Contact Information</string>
    <string name="employee_contact_information">Employee Contact Information</string>
    <string name="extra_shift_requests_swaps_and_call_offs">Extra Shift Requests, Swaps and Call-Offs</string>
    <string name="ok">OK</string>
    <string name="email_">Email:</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="launch_google_maps_">"Launch Google Maps "</string>
    <string name="launch_maps">Launch Maps</string>
    <string name="name_">Name:</string>
    <string name="address_">Address:</string>
    <string name="phone_">Phone:</string>
    <string name="mobile_">Mobile:</string>
    <string name="send">Send</string>
    <string name="message_">"Message : "</string>
    <string name="subject_">"Subject : "</string>
    <string name="to_">"To : "</string>
    <string name="edit">Edit</string>
    <string name="position_">Position:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="back">Back</string>
    <string name="day_">Day:</string>
    <string name="name">Name</string>
    <string name="time_">Time:</string>
    <string name="employee_shift_infomation">Employee Shift Infomation</string>
    <string name="shift_day_">Shift Day:</string>
    <string name="email">Email</string>
    <string name="employee_schedules">Employee Schedules</string>
    <string name="contacts">Contacts</string>
    <string name="trade">Trade</string>
    <string name="submit">Submit</string>
    <string name="for_">For:</string>
    <string name="trade_">Trade:</string>
    <string name="new_shift_">New Shift:</string>
    <string name="shift_request_details">Shift Request Details</string>
    

</resources>