<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="62dp"
        android:text="@string/name_" />

    <TextView
        android:id="@+id/srTradeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tradeTV"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/tradeTV" />

    <TextView
        android:id="@+id/srNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tradeTV"
        android:layout_alignLeft="@+id/srTradeTV"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/nameTV" />

    <TextView
        android:id="@+id/srNewShiftTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newShiftTV"
        android:layout_alignLeft="@+id/srTradeTV"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/srback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/srNewShiftTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/tradeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nameTV"
        android:layout_below="@+id/nameTV"
        android:layout_marginTop="42dp"
        android:text="@string/trade_" />

    <TextView
        android:id="@+id/newShiftTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameTV"
        android:layout_below="@+id/tradeTV"
        android:layout_marginTop="32dp"
        android:text="@string/new_shift_" />

    <TextView
        android:id="@+id/requested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newShiftTV"
        android:layout_centerVertical="true"
        android:text="Requested:"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/srRequested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/requested" />

</RelativeLayout>