<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleblue"
    android:paddingLeft="5dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/shift_request_details"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/name_"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name_et"
        android:layout_marginTop="21dp"
        android:text="@string/trade"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/date_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/date"
        android:layout_alignLeft="@+id/name_et"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Submit" />

    <EditText
        android:id="@+id/trade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date"
        android:layout_alignLeft="@+id/name_et"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time"
        android:layout_below="@+id/time"
        android:layout_marginTop="21dp"
        android:text="@string/for_"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_below="@+id/date_et"
        android:layout_marginTop="24dp"
        android:text="Request Shift:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/shiftRequested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/extra"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="date" />
    
</RelativeLayout>


